bug with no. of queens          -Aaron smaller numbers                 -Aaron ✅ Slow                            -Aaron ✅

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,23 @@ body{
   border:1px solid #aaa;
   min-height:90vh;
 }
+
+.placeQueensBtn{
+    display: inline-block;
+    padding: 5px 12px;
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  .placeQueensBtn:hover {
+    background-color: #2980b9;
+  }
+
+  
